tests/snapshots/tests__array_ptr_cast_1@sem.snap
---
source: tests/tests.rs
expression: typed_hir
snapshot_kind: text
---
HirPool([
  TypedHir(
    id: NodeId(64),
    ty: Pointer(Char),
    kind: VarDecl(Pointer(Char), "s", None),
  ),
  TypedHir(
    id: NodeId(65),
    ty: Void,
    kind: FunDecl(Void, "print_s", [
      NodeRef(0),
    ]),
  ),
  TypedHir(
    id: NodeId(66),
    ty: Char,
    kind: VarDecl(Char, "c", None),
  ),
  TypedHir(
    id: NodeId(67),
    ty: Void,
    kind: FunDecl(Void, "print_c", [
      NodeRef(2),
    ]),
  ),
  TypedHir(
    id: NodeId(68),
    ty: Int,
    kind: VarDecl(Int, "i", None),
  ),
  TypedHir(
    id: NodeId(69),
    ty: Void,
    kind: FunDecl(Void, "print_i", [
      NodeRef(4),
    ]),
  ),
  TypedHir(
    id: NodeId(70),
    ty: Void,
    kind: FunDecl(Void, "main", []),
  ),
  TypedHir(
    id: NodeId(71),
    ty: Array(4, Int),
    kind: VarDecl(Array(4, Int), "a", None),
  ),
  TypedHir(
    id: NodeId(72),
    ty: Pointer(Int),
    kind: VarDecl(Pointer(Int), "b", None),
  ),
  TypedHir(
    id: NodeId(73),
    ty: Array(4, Int),
    kind: VarExpr(NodeRef(7)),
  ),
  TypedHir(
    id: NodeId(74),
    ty: Int,
    kind: Literal(Int(0)),
  ),
  TypedHir(
    id: NodeId(75),
    ty: Int,
    kind: ArrayAccessExpr(NodeRef(9), NodeRef(10)),
  ),
  TypedHir(
    id: NodeId(76),
    ty: Int,
    kind: Literal(Int(55)),
  ),
  TypedHir(
    id: NodeId(77),
    ty: Int,
    kind: Assign(NodeRef(11), NodeRef(12)),
  ),
  TypedHir(
    id: NodeId(79),
    ty: Array(4, Int),
    kind: VarExpr(NodeRef(7)),
  ),
  TypedHir(
    id: NodeId(85),
    ty: Int,
    kind: Literal(Int(1)),
  ),
  TypedHir(
    id: NodeId(87),
    ty: Int,
    kind: ArrayAccessExpr(NodeRef(14), NodeRef(15)),
  ),
  TypedHir(
    id: NodeId(88),
    ty: Int,
    kind: Literal(Int(66)),
  ),
  TypedHir(
    id: NodeId(90),
    ty: Int,
    kind: Assign(NodeRef(16), NodeRef(17)),
  ),
  TypedHir(
    id: NodeId(92),
    ty: Pointer(Int),
    kind: VarExpr(NodeRef(8)),
  ),
  TypedHir(
    id: NodeId(94),
    ty: Array(4, Int),
    kind: VarExpr(NodeRef(7)),
  ),
  TypedHir(
    id: NodeId(96),
    ty: Pointer(Int),
    kind: TypecastExpr(Pointer(Int), NodeRef(20)),
  ),
  TypedHir(
    id: NodeId(98),
    ty: Pointer(Int),
    kind: Assign(NodeRef(19), NodeRef(21)),
  ),
  TypedHir(
    id: NodeId(100),
    ty: Pointer(Int),
    kind: VarExpr(NodeRef(8)),
  ),
  TypedHir(
    id: NodeId(101),
    ty: Int,
    kind: DerefExpr(NodeRef(23)),
  ),
  TypedHir(
    id: NodeId(102),
    ty: Void,
    kind: FunCallExpr(NodeRef(5), [
      NodeRef(24),
    ]),
  ),
  TypedHir(
    id: NodeId(103),
    ty: r#None,
    kind: Block([
      NodeRef(7),
      NodeRef(8),
      NodeRef(13),
      NodeRef(18),
      NodeRef(22),
      NodeRef(25),
    ]),
  ),
  TypedHir(
    id: NodeId(105),
    ty: Void,
    kind: FunDefn(NodeRef(6), NodeRef(26)),
  ),
], [
  NodeRef(1),
  NodeRef(3),
  NodeRef(5),
  NodeRef(27),
])
