tests/snapshots/tests__bad_fundecl@parser.snap
---
source: tests/tests.rs
expression: ast
snapshot_kind: text
---
Program([
  Stmt(Decl(VarDecl(Int, "foo", None))),
  Stmt(Decl(FunDefn(
    decl: Stmt(Decl(FunDecl(Void, "foo", []))),
    block: Block(
      stmts: [
        ExprStmt(FunCallExpr(VarExpr("print_s"), [
          TypecastExpr(Pointer(Char), Literal(Str("oh noes!!"))),
        ])),
      ],
    ),
  ))),
  Stmt(Decl(FunDefn(
    decl: Stmt(Decl(FunDecl(Int, "main", []))),
    block: Block(
      stmts: [
        Return(Some(Literal(Int(0)))),
      ],
    ),
  ))),
])
