tests/snapshots/tests__call_non_function@parser.snap
---
source: tests/tests.rs
expression: ast
snapshot_kind: text
---
[
  VarDecl(Int, "notfunc", None),
  FunDefn(
    decl: FunDecl(Void, "main", []),
    block: Block(
      stmts: [
        ExprStmt(FunCallExpr(VarExpr("notfunc"), [
          Literal(Int(3)),
        ])),
      ],
    ),
  ),
]
