tests/snapshots/tests__decls@parser.snap
---
source: tests/tests.rs
expression: ast
snapshot_kind: text
---
[
  VarDecl(Int, "i", None),
  VarDecl(Char, "c", None),
  VarDecl(Pointer(Char), "s", None),
  VarDecl(Array(2, Int), "a", None),
  VarDecl(Array(4, Array(5, Int)), "b", None),
  VarDecl(Pointer(Void), "v", None),
  FunDecl(Void, "foo", [
    VarDecl(Int, "n", None),
  ]),
  VarDecl(Pointer(Void), "NULL", None),
]
