tests/snapshots/tests__decls@sem.snap
---
source: tests/tests.rs
expression: typed_hir
snapshot_kind: text
---
HirPool([
  TypedHir(
    id: NodeId(104),
    ty: Pointer(Char),
    kind: VarDecl(Pointer(Char), "s", None),
  ),
  TypedHir(
    id: NodeId(106),
    ty: Void,
    kind: FunDecl(Void, "print_s", [
      NodeRef(0),
    ]),
  ),
  TypedHir(
    id: NodeId(107),
    ty: Char,
    kind: VarDecl(Char, "c", None),
  ),
  TypedHir(
    id: NodeId(108),
    ty: Void,
    kind: FunDecl(Void, "print_c", [
      NodeRef(2),
    ]),
  ),
  TypedHir(
    id: NodeId(109),
    ty: Int,
    kind: VarDecl(Int, "i", None),
  ),
  TypedHir(
    id: NodeId(110),
    ty: Void,
    kind: FunDecl(Void, "print_i", [
      NodeRef(4),
    ]),
  ),
  TypedHir(
    id: NodeId(111),
    ty: Int,
    kind: VarDecl(Int, "i", None),
  ),
  TypedHir(
    id: NodeId(112),
    ty: Char,
    kind: VarDecl(Char, "c", None),
  ),
  TypedHir(
    id: NodeId(113),
    ty: Pointer(Char),
    kind: VarDecl(Pointer(Char), "s", None),
  ),
  TypedHir(
    id: NodeId(114),
    ty: Array(2, Int),
    kind: VarDecl(Array(2, Int), "a", None),
  ),
  TypedHir(
    id: NodeId(115),
    ty: Array(4, Array(5, Int)),
    kind: VarDecl(Array(4, Array(5, Int)), "b", None),
  ),
  TypedHir(
    id: NodeId(116),
    ty: Pointer(Void),
    kind: VarDecl(Pointer(Void), "v", None),
  ),
  TypedHir(
    id: NodeId(117),
    ty: Int,
    kind: VarDecl(Int, "n", None),
  ),
  TypedHir(
    id: NodeId(118),
    ty: Void,
    kind: FunDecl(Void, "foo", [
      NodeRef(12),
    ]),
  ),
  TypedHir(
    id: NodeId(119),
    ty: Pointer(Void),
    kind: VarDecl(Pointer(Void), "NULL", None),
  ),
], [
  NodeRef(1),
  NodeRef(3),
  NodeRef(5),
  NodeRef(6),
  NodeRef(7),
  NodeRef(8),
  NodeRef(9),
  NodeRef(10),
  NodeRef(11),
  NodeRef(13),
  NodeRef(14),
])
