tests/snapshots/tests__deref_non_ptr@parser.snap
---
source: tests/tests.rs
expression: ast
snapshot_kind: text
---
[
  FunDefn(
    decl: FunDecl(Int, "main", []),
    block: Block(
      stmts: [
        Decl(VarDecl(Int, "i", None)),
        ExprStmt(Assign(VarExpr("i"), Literal(Int(0)))),
        Return(Some(DerefExpr(VarExpr("i")))),
      ],
    ),
  ),
]
