tests/snapshots/tests__exprs@parser.snap
---
source: tests/tests.rs
expression: ast
snapshot_kind: text
---
[
  FunDefn(
    decl: FunDecl(Void, "main", []),
    block: Block(
      stmts: [
        Decl(MultiVarDecl(Int, [
          "a",
          "b",
        ], [
          Some(Literal(Int(0))),
          Some(Literal(Int(10))),
        ])),
        Decl(MultiVarDecl(Int, [
          "c",
          "d",
          "e",
        ], [
          Some(Literal(Int(5))),
          None,
          Some(BinOp(Literal(Int(0)), Sub, Literal(Int(2)))),
        ])),
        While(
          expr: BinOp(VarExpr("a"), Lt, VarExpr("b")),
          stmt: Block(
            stmts: [
              ExprStmt(Assign(VarExpr("c"), BinOp(Literal(Int(2)), Mul, BinOp(VarExpr("c"), Add, Literal(Int(1)))))),
              ExprStmt(Assign(VarExpr("b"), BinOp(VarExpr("b"), Mul, BinOp(VarExpr("b"), Sub, Literal(Int(1)))))),
            ],
          ),
        ),
        ExprStmt(FunCallExpr(VarExpr("print_i"), [
          VarExpr("c"),
        ])),
      ],
    ),
  ),
]
